--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,4 +1,5 @@
 apply plugin: 'com.android.application'
+apply plugin: 'org.greenrobot.greendao' // apply plugin
 
 android {
     compileSdkVersion 26
@@ -28,4 +29,13 @@ dependencies {
     //support butterknife
     implementation 'com.jakewharton:butterknife:8.4.0'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.4.0'
+    //support greendao
+    compile 'org.greenrobot:greendao:3.2.2'
+}
+
+//greendao相关配置
+greendao {
+    schemaVersion 1
+    daoPackage 'com.samwoo.slot.greendao'
+    targetGenDir 'src/main/java'
 }
