--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,7 +30,11 @@ dependencies {
     implementation 'com.jakewharton:butterknife:8.4.0'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.4.0'
     //support greendao
-    compile 'org.greenrobot:greendao:3.2.2'
+    implementation 'org.greenrobot:greendao:3.2.2'
+    //support recyclerview
+    implementation 'com.android.support:recyclerview-v7:26.1.0'
+    //support glide
+    implementation 'com.github.bumptech.glide:glide:3.7.0'
 }
 
 //greendao相关配置
